--- a/app/views/academics/show.html.erb
+++ b/app/views/academics/show.html.erb
@@ -14,12 +14,12 @@
 <%= image_tag @academic.image_url, :align => :right, :size => "96x96", :alt => "[image]" %>
 
 <p>
-  <b>Work phone:</b>
+  <b>Phone:</b>
   <%= @academic.work_phone %>
 </p>
 
 <p>
-  <b>Work mail:</b>
+  <b>Email:</b>
   <%= link_to @academic.email, @academic.mailto %>
 </p>
 
@@ -28,17 +28,24 @@
   <%= link_to nil, @academic.home_url %>
 </p>
 
-<% if @academic.supervisions.any? or @academic.committees.any? %>
-<h3>Students</h3>
+<% if @academic.supervisions.any? %>
+  <h3>Students</h3>
+  <ul>
+    <% @academic.supervisions.each do |s| %>
+      <li>
+        <%= link_to s.student, s.student %> (<%= s.status %>, <%= s.student.programme %>, <%= s.student.status_or_blank %>)
+      </li>
+    <% end %>
+  </ul>
+<% end %>
 
-<ul>
-<% @academic.supervisions.each do |s| %>
-<li><%= link_to s.student, s.student %> (<%= s.status %>, <%= s.student.programme %>, <%= s.student.status %>)</li>
-<% end %>
-<% @academic.committees.each do |s| %>
-<li><%= link_to s.student, s.student %> (GRC)</li>
-<% end %>
-</ul>
+<% if @academic.committees.any? %>
+  <h3>GRC</h3>
+  <ul>  
+    <% @academic.committees.each do |s| %>
+      <li><%= link_to s.student, s.student %></li>
+    <% end %>
+  </ul>
 <% end %>
 
 <% if can? :update, @academic %>
