--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -50,6 +50,10 @@
   <td><%= @student.expected_on %></td>
 </tr>
 <tr>
+  <th>Viva date:</th>
+  <td><%= @student.viva_date %></td>
+</tr>
+<tr>
   <th>Completed on:</th>
   <td><%= @student.completed_on %></td>
 </tr>
