--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,8 @@
 <table>
   <tr>
     <th>Email</th>
+    <th>Online</th>
+    <th>#</th>
     <th></th>
     <th></th>
     <th></th>
@@ -11,6 +13,8 @@
 <% @users.each do |user| %>
   <tr>
     <td><%= user.email %></td>
+    <td><%= user.current_sign_in_at %></td>
+    <td align="right"><%= user.sign_in_count %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
