--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,25 @@
   <%= @user.email %>
 </p>
 
+<table>
+  <tr>
+    <td>Sign in count:</td>
+    <td><%= @user.sign_in_count %></td>
+  </tr>
+  <tr>
+    <td>Signed in since:</td>
+    <td><%= @user.current_sign_in_at %></td>
+    <td>from:</td>
+    <td><%= @user.current_sign_in_ip %></td>
+  </tr>
+  <tr>
+    <td>Last signed in:</td>
+    <td><%= @user.last_sign_in_at %></td>
+    <td>from:</td>
+    <td><%= @user.last_sign_in_ip %></td>
+  </tr>
+</table>
+
 <h3 class="edit-head"><%= 'Role'.pluralize @user.roles.count %></h3>
 <div class="edit">
 <%= link_to '[+]', new_assignment_path(:user_id => @user) %>
