--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,27 +1,31 @@
 <div id="main">
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <%= f.hidden_field :email %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
-
-  <div><%= f.submit "Update" %></div>
+  <fieldset>
+    <legend>Change Password</legend>
+    <table>
+      <tr>
+        <td align="right"><%= f.label :password, "New password" %></td>
+        <td><%= f.password_field :password, :autocomplete => "off" %></td>
+      </tr>
+      <tr>
+        <td align="right"><%= f.label :password_confirmation, "Confirm new password" %></td>
+        <td><%= f.password_field :password_confirmation %></td>
+      </tr>
+      <tr>
+        <td align="right"><%= f.label :current_password %></td>
+        <td><%= f.password_field :current_password %></td>
+      </tr>
+      <tr>
+	<td />
+        <td><%= f.submit "Change my password" %></td>
+      </tr>
+    </table>
+  </fieldset>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
 
 <%= link_to "Back", :back %>
 </div>
