--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,16 +13,22 @@
   </div>
   <div id="navigation">
     <div id="home"> |
+      <% if user_signed_in? %>
+	<% if current_user.academic %>
+          <%= link_to 'Home', current_user.academic %> |
+	<% else %>
+          <%= link_to 'Home', root_path %> |
+        <% end %>
+      <% end %>
       <%= link_to 'Academics', academics_path %> |
       <%= link_to 'Students', students_path %> |
       <%= link_to 'Rooms', rooms_path %> |
     </div>
     <div id="login"> |
       <% if user_signed_in? %>
- <%= link_to current_user.email, edit_user_registration_path %> |
+        <%= link_to current_user.email, edit_user_registration_path %> |
         <%= link_to 'Sign out', destroy_user_session_path, :method => :delete, :confirm => "Sign out?" %> |
       <% else %>
-        <%= link_to 'Sign up', new_user_registration_path %> |
         <%= link_to 'Sign in', new_user_session_path %> |
       <% end %>
     </div>
