--- a/app/views/supervisions/new.html.erb
+++ b/app/views/supervisions/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Add new supervisor for <%= @supervision.student %></h1>
+<div id="main">
+<h1>Add supervisor for <%= @supervision.student %></h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', @supervision.student %>
+</div>
