--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -14,10 +14,10 @@
   <%= f.hidden_field :student_id %>
 
   <div class="field">
-    <%= f.label :academic_id %><br />
+    <%= f.label :academic_id, "Name" %><br />
     <%= f.select :academic_id, options_from_collection_for_select(Academic.all, 'id', 'name'), :include_blank => true %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Add member" %>
   </div>
 <% end %>
