--- a/app/views/committees/edit.html.erb
+++ b/app/views/committees/edit.html.erb
@@ -1,6 +1,8 @@
+<div id="main">
 <h1>Editing committee</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @committee %> |
 <%= link_to 'Back', @committee.student %>
+</div>
