--- a/app/views/committees/new.html.erb
+++ b/app/views/committees/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New committee</h1>
+<div id="main">
+<h1>Add member to GRC for <%= @committee.student %></h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', @committee.student %>
+</div>
