--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,6 +1,8 @@
+<div id="main">
 <h1>Editing student</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @student %> |
 <%= link_to 'Back', students_path %>
+</div>
