--- a/app/views/supervisions/edit.html.erb
+++ b/app/views/supervisions/edit.html.erb
@@ -1,6 +1,8 @@
+<div id="main">
 <h1>Editing supervision</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @supervision %> |
 <%= link_to 'Back', @supervision.student %>
+</div>
