allow academic to edit their own page.

--- a/app/views/academics/_form.html.erb
+++ b/app/views/academics/_form.html.erb
@@ -14,7 +14,7 @@
   <table>
     <div class="field">
       <tr>
-	<td>
+	<td align="right">
 	  <%= f.label :title %>
 	</td>
 	<td>
@@ -22,23 +22,23 @@
 	</td>
       </tr>
       <tr>
-	<td>
-	  <%= f.label :first %>
+	<td align="right">
+	  <%= f.label :first, "First Name" %>
 	</td>
 	<td>
 	  <%= f.text_field :first %>
 	</td>
       </tr>
       <tr>
-	<td>
-	  <%= f.label :last %>
+	<td align="right">
+	  <%= f.label :last, "Last Name" %>
 	</td>
 	<td>
 	  <%= f.text_field :last %>
 	</td>
       </tr>
       <tr>
-	<td>
+	<td align="right">
 	  <%= f.label :school %>
 	</td>
 	<td>
@@ -46,16 +46,16 @@
 	</td>
       </tr>
       <tr>
-	<td>
-	  <%= f.label :work_phone %>
+	<td align="right">
+	  <%= f.label :work_phone, "Phone" %>
 	</td>
 	<td>
 	  <%= f.text_field :work_phone %>
 	</td>
       </tr>
       <tr>
-	<td>
-	  <%= f.label :work_mail %>
+	<td align="right">
+	  <%= f.label :work_mail, "Email" %>
 	</td>
 	<td>
 	  <%= f.text_field :work_mail, :size => 16 %>
@@ -63,15 +63,15 @@
 	</td>
       </tr>
       <tr>
-	<td>
-	  <%= f.label :home_url %>
+	<td align="right">
+	  <%= f.label :home_url, "Home Page" %>
 	</td>
 	<td>
 	  <%= f.text_field :home_url %>
 	</td>
       </tr>
       <tr>
-	<td>
+	<td align="right">
 	  <%= f.label :image_url %>
 	</td>
 	<td>
