--- a/app/views/academics/show.html.erb
+++ b/app/views/academics/show.html.erb
@@ -48,7 +48,7 @@
   </ul>
 <% end %>
 
-<% if can? :update, @academic %>
+<% if can? :destroy, @academic %>
 <% if @academic.records.any? %>
 <h3>Records</h3>
 <ul>
@@ -63,9 +63,11 @@
 
 <% if can? :update, @academic %>
   <%= link_to 'Edit', edit_academic_path(@academic) %> |
+<% end %>
+<% if can? :destroy, @academic %>
   <%= link_to 'Add Record', new_record_path(:academic_id => @academic) %> |
 <% end %>
-<% if can? :delete, @academic %>
+<% if can? :destroy, @academic %>
   <%= link_to 'Delete', @academic, :confirm => 'Are you sure?', :method => :delete %> |
 <% end %>
 <%= link_to 'Back', academics_path %>
