polished school views.

--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-
+<div id="main">
 <p>
   <b>Name:</b>
   <%= @school.name %>
@@ -8,3 +7,4 @@
 
 <%= link_to 'Edit', edit_school_path(@school) %> |
 <%= link_to 'Back', schools_path %>
+</div>
