--- a/app/views/schools/edit.html.erb
+++ b/app/views/schools/edit.html.erb
@@ -1,6 +1,8 @@
+<div id="main">
 <h1>Editing school</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @school %> |
 <%= link_to 'Back', schools_path %>
+</div>
