--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,3 +1,4 @@
+<div id="main">
 <h1>Listing schools</h1>
 
 <table>
@@ -21,3 +22,4 @@
 <br />
 
 <%= link_to 'New School', new_school_path %>
+</div>
