--- a/app/views/academics/_form.html.erb
+++ b/app/views/academics/_form.html.erb
@@ -39,10 +39,10 @@
       </tr>
       <tr>
 	<td align="right">
-	  <%= f.label :school %>
+	  <%= f.label :school_id %>
 	</td>
 	<td>
-	  <%= f.select :school, SCHOOLS, :include_blank => true %>
+	  <%= f.select :school_id, School.all.collect { |s| [s.name, s.id] }, :include_blank => true %>
 	</td>
       </tr>
       <tr>
