--- a/app/views/academics/show.html.erb
+++ b/app/views/academics/show.html.erb
@@ -9,7 +9,7 @@
 
 <h3><%= @academic.school %></h3>
 
-<h2><%= @academic %></h2>
+<h2><%= @academic %><%= if @academic.short then " (#{@academic.short})" end %></h2>
 
 <%= image_tag @academic.image_url, :align => :right, :size => "96x96", :alt => "[image]" %>
 
