--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,10 +13,13 @@ From  here you can access:
 a list of <%= Academic.all.count %> <%= link_to 'academics', academics_path %>,
 </li>
 <li>
-a list of <%= Student.all.count %> <%= link_to 'postgraduate students', students_path %>,
+a list of <%= Student.all.count %> <%= link_to 'graduate students', students_path %>,
 </li>
 <li>
-a list of <%= Room.all.count %> <%= link_to 'postgrad rooms', rooms_path %>.
+a list of <%= Room.all.count %> <%= link_to 'postgrad rooms', rooms_path %>,
+</li>
+<li>
+a list of <%= Author.all.count %> <%= link_to 'project students', students_path %>.
 </li>
 </ul>
 </p>
