--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,9 @@
         <% end %>
       <% end %>
       <%= link_to 'Academics', academics_path %> |
-      <%= link_to 'Students', students_path %> |
+      <%= link_to 'Graduate Students', students_path %> |
       <%= link_to 'Rooms', rooms_path %> |
+      <%= link_to 'Project Students', authors_path %> |
     </div>
     <div id="login"> |
       <% if user_signed_in? %>
