added examination table.

--- a/app/views/directions/show.html.erb
+++ b/app/views/directions/show.html.erb
@@ -37,5 +37,5 @@
 </p>
 
 <%= link_to 'Edit', edit_direction_path(@direction) %> |
-<%= link_to 'Back', directions_path %>
+<%= link_to 'Back', @direction.academic %>
 </div>
