modified project view.

--- a/app/views/examinations/new.html.erb
+++ b/app/views/examinations/new.html.erb
@@ -19,7 +19,7 @@
     <%= f.hidden_field :project_id %>
 
   <div class="field">
-    <%= f.label :academic_id, 'Name' %><br />
+    <%= f.label :academic_id, "Examiner's Name" %><br />
     <%= f.select :academic_id, options_from_collection_for_select(Academic.all, 'id', 'name'), :include_blank => true %>
   </div>
   <div class="actions">
