--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -2,4 +2,9 @@
 <%= link_to_unless_current(project.supervisor, project.supervisor) { "" } %>
 <%= link_to_unless_current(project.author, project.author) { "" } %>
 : <%= link_to project.title, project %>
+  <% if can? :update, @author %>
+    <div class="edit">
+      <%= link_to '[-]', project, :confirm => 'Are you sure?', :method => :delete %>
+    </div>
+  <% end %>
 </li>
