--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -39,5 +39,5 @@
 </ul>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Back', @project.author %>
 <div>
