--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing project</h1>
+<div id="main">
+<h1>Editing project title</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Back', @project.author %>
+</div>
