set some abilities ...

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@ a list of <%= Student.all.count %> <%= link_to 'graduate students', students_pat
 a list of <%= Room.all.count %> <%= link_to 'postgrad rooms', rooms_path %>,
 </li>
 <li>
-a list of <%= Author.all.count %> <%= link_to 'project students', students_path %>.
+a list of <%= Author.all.count %> <%= link_to 'project students', authors_path %>.
 </li>
 </ul>
 </p>
