--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -33,6 +33,8 @@
 
 <hr/>
 
-<%= link_to 'Edit', edit_author_path(@author) %> |
+<% if can? :update, @author %>
+  <%= link_to 'Edit', edit_author_path(@author) %> |
+<% end %>
 <%= link_to 'Back', authors_path %>
 </div>
