--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -38,6 +38,8 @@
   <% end %>
 </ul>
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
+<% if can? :update, @project %>
+  <%= link_to 'Edit', edit_project_path(@project) %> |
+<% end %>
 <%= link_to 'Back', @project.author %>
 <div>
