minor change to welcome message.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div id="main">
 <h1>SchoolMaster</h1>
 <p>
-  Welcome to the World of Postgraduate Supervision!
+  Welcome to the World of Student Supervision!
 </p>
 
 <p>It is now <%= Time.now.strftime('%H:%M:%S (%Z) on %A, %B %d, %Y') %>.</p>
