updated author forms.

--- a/app/views/authors/_form.html.erb
+++ b/app/views/authors/_form.html.erb
@@ -28,6 +28,10 @@
     <%= f.text_field :programme %>
   </div>
   <div class="field">
+    <%= f.label :photo_url %><br />
+    <%= f.text_field :photo_url %>
+  </div>
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
