--- a/app/views/authors/edit.html.erb
+++ b/app/views/authors/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing author</h1>
+<div id="main">
+<h1>Editing Project Student</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @author %> |
 <%= link_to 'Back', authors_path %>
+</div>
