--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New author</h1>
+<div id="main">
+<h1>New Project Student</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', authors_path %>
+</div>
