--- a/app/views/examinations/show.html.erb
+++ b/app/views/examinations/show.html.erb
@@ -1,30 +1,28 @@
-<p id="notice"><%= notice %></p>
+<div id="main">
+<h1>Examiner's Report</h1>
+
+<h3><%= @examination.project.author %>: <%= @examination.project.title %></h3>
 
 <p>
-  <b>Project:</b>
-  <%= @examination.project_id %>
+  <b>Examiner:</b> <%= @examination.academic %>
 </p>
 
-<p>
-  <b>Academic:</b>
-  <%= @examination.academic_id %>
-</p>
+<table>
+<tr>
+  <td align="right"><b>Presentation mark (10%):</b></td>
+  <td align="right"><%= @examination.presentation_mark %></td>
+</tr>
+
+<tr>
+  <td align="right"><b>Report mark (80%):</b></td>
+  <td align="right"><%= @examination.report_mark %></td>
+</tr>
+</table>
 
 <p>
   <b>Comment:</b>
   <%= @examination.comment %>
 </p>
-
-<p>
-  <b>Presentation mark:</b>
-  <%= @examination.presentation_mark %>
-</p>
-
-<p>
-  <b>Report mark:</b>
-  <%= @examination.report_mark %>
-</p>
-
 
 <%= link_to 'Edit', edit_examination_path(@examination) %> |
 <%= link_to 'Back', examinations_path %>
