--- a/app/views/examinations/edit.html.erb
+++ b/app/views/examinations/edit.html.erb
@@ -4,7 +4,7 @@
 <h3><%= @examination.project.author %>: <%= @examination.project.title %></h3>
 
 <p>
-<b>Supervisor:</b> <%= @examination.academic %>
+<b>Examiner:</b> <%= @examination.academic %>
 </p>
 
 <%= render 'form' %>
