adjusted 'Back' links.

--- a/app/views/directions/edit.html.erb
+++ b/app/views/directions/edit.html.erb
@@ -10,5 +10,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @direction %> |
-<%= link_to 'Back', directions_path %>
+<%= link_to 'Back', @direction.academic %>
 </div>
