--- a/app/views/examinations/edit.html.erb
+++ b/app/views/examinations/edit.html.erb
@@ -10,5 +10,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @examination %> |
-<%= link_to 'Back', examinations_path %>
+<%= link_to 'Back', @examination.academic %>
 </div>
