--- a/app/views/examinations/show.html.erb
+++ b/app/views/examinations/show.html.erb
@@ -25,4 +25,4 @@
 </p>
 
 <%= link_to 'Edit', edit_examination_path(@examination) %> |
-<%= link_to 'Back', examinations_path %>
+<%= link_to 'Back', @examination.academic %>
