--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -38,6 +38,26 @@
   <% end %>
 </ul>
 
+<h3 class="edit-head">Time Slot:</h3>
+<% if can? :update, @project %>
+  <div class="edit">
+    <%= link_to '[+]', new_booking_path(:project_id => @project) %>
+  </div>
+<% end %>
+
+<ul>
+  <% @project.bookings.each do |booking| %>
+    <li>
+      <%= link_to booking.academic, booking.academic %> 
+      <% if can? :update, @project %>
+        <div class="edit">
+          <%= link_to '[-]', booking, :confirm => 'Are you sure?', :method => :delete %>
+        </div>
+      <% end %>
+    </li>
+  <% end %>
+</ul>
+
 <% if can? :update, @project %>
   <%= link_to 'Edit', edit_project_path(@project) %> |
 <% end %>
