--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,9 @@
+<div id="main">
 <h1>New booking</h1>
+
+<h3><%= @booking.project.short %></h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', bookings_path %>
+<%= link_to 'Back', @booking.project %>
+</div>
