--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,8 +1,8 @@
-<p id="notice"><%= notice %></p>
-
-<h2>Venue</h2>
+<div id="main">
+<h3>Project Presentations</h3>
 
 <%= render @venue %>
 
 <%= link_to 'Edit', edit_venue_path(@venue) %> |
 <%= link_to 'Back', venues_path %>
+</div>
