--- a/app/views/academics/edit.html.erb
+++ b/app/views/academics/edit.html.erb
@@ -1,6 +1,8 @@
+<div id="main">
 <h1>Editing academic</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @academic %> |
 <%= link_to 'Back', academics_path %>
+</div>
