create examinations as 'open'.

--- a/app/views/examinations/new.html.erb
+++ b/app/views/examinations/new.html.erb
@@ -16,7 +16,8 @@
     </div>
   <% end %>
 
-    <%= f.hidden_field :project_id %>
+  <%= f.hidden_field :project_id %>
+  <%= f.hidden_field :open %>
 
   <div class="field">
     <%= f.label :academic_id, "Examiner's Name" %><br />
